# oneAPI-setup-script

./: .dccache  README.md  build.sh  build_all.sh  build_minimal.sh  build_with_libcxx.sh  fpgaemu.sh  opencl.sh
sample/: CMakeLists.txt  README.md  mkl_matmult.cpp  mkl_matmult_usm.cpp
sample/include/: chrono.hpp  common.hpp  sycl_unique_ptr.hpp  usm_fantom_types.hpp  usm_smart_ptr.hpp
